Bug 1259677 - nsRuleNode passes wrong hash key to PLDHashTable when converting child list into child hash. r=bz, a=ritu